Bug #72: Click-to-Call : Pas de changement de camera possible
  Modified files:
    o src/index.css
      Add .btn-white-disabled for the presentation of a button that is disabled.
    o src/pages/Call.tsx
      In switchCameraClick(), do nothing if the video is muted, fix passing
      the facingMode parameter when calling getUserMedia().
      For the mobile, always display the switch camera button even if the
      camera is muted so that we avoid a change in presentation, the switch
      camera button remains fixed but with a grey/disabled presentation
      as we do in the application.

--- a/src/index.css
+++ b/src/index.css
@@ -179,3 +179,6 @@ svg {
 .btn-white {
 	@apply rounded-full bg-white p-1 hover:bg-white/90 active:bg-white/80;
 }
+.btn-white-disabled {
+	@apply bg-white/50 hover:bg-white/50;
+}
