Feature #76: Affichage de l'écran de remerciement non optimal sur mobile
  Modified files:
    o src/components/Thanks.tsx
      Use landscape: prefix to apply some specific css in landscape mode
      and reduce vertical spacing on mobile devices; use landscape:lg:
      for larger devices mostly desktop and tablets to increase vertical
      spacing; use landscape: to display the thanks page using two columns;
      use portrait: to apply some specific css in portrait mode only.
    o src/index.css
      Add specific CSS for the thanks image to accomodate for
      several display sizes

--- a/src/index.css
+++ b/src/index.css
@@ -182,3 +182,21 @@ svg {
 .btn-white-disabled {
 	@apply bg-white/50 hover:bg-white/50;
 }
+.local-view {
+	width: 25%;
+}
+.thanks-image {
+	width: 70%;
+}
+/* Adjust image size for several mobile phones to avoid scrolling */
+@media (max-width: 400px) {
+	.thanks-image {
+		width: 50%;
+	}
+}
+@media (max-height: 690px) and (orientation:landscape) {
+	.thanks-image {
+		width: 60%;
+	}
+}
+
