--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 /*
  *  Copyright (c) 2023-2025 twinlife SA.
- *
- *  All Rights Reserved.
+ *  SPDX-License-Identifier: AGPL-3.0-only
  *
  *  Contributors:
  *   Olivier Dupont <olivier.dupont@twin.life>
@@ -13,14 +12,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
- *  Copyright (c) 2021 twinlife SA.
- *
- *  All Rights Reserved.
- *
- *  Contributors:
- *   Stephane Carrez (Stephane.Carrez@twin.life)
- */
 a,
 abbr,
 acronym,
