Feature #81: Preparation mise en Open Source
  Modified files:
    o scripts/publicAssets.js
    o src/index.css
    o translations/translations.js
      Add missing copyright header.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
-@import url("assets/fonts/fonts.css");
+/*
+ *  Copyright (c) 2023-2025 twinlife SA.
+ *
+ *  All Rights Reserved.
+ *
+ *  Contributors:
+ *   Olivier Dupont <olivier.dupont@twin.life>
+ *   Stephane Carrez (Stephane.Carrez@twin.life)
+ */
+ @import url("assets/fonts/fonts.css");
 
 @tailwind base;
 @tailwind components;
